# Feral-Std

./: .gitignore  CMakeLists.txt  README.md
include/: builder.fer  io.fer  os.fer  runtime.fer  sys.fer  vec.fer
src/: fs.cpp  io.cpp  lang.cpp  map.cpp  os.cpp  ptr.cpp  runtime.cpp  str.cpp  sys.cpp  vec.cpp
